--- a/School/back.css
+++ b/School/back.css
@@ -23,26 +23,16 @@ body {
     align-items: center;
     justify-content: space-between;
 }
-.box button {
-    cursor: pointer;
+img {
     display: flex;
-    margin-top: -20%;
-    background: linear-gradient(90deg, rgba(9, 9, 121, 1) 0%, rgb(61, 122, 202) 35%, rgb(49, 139, 212) 100%);
-    border: 6px solid rgb(199, 26, 26);
-    box-shadow: 0 0 20px red, 0 0 30px red;
-    border-radius: 30%;
-    width: 300px;
-    height: 310px;
-    justify-content: center;
+    position: relative;
+    margin: 60% 0 0 60%;
+    border: 6px solid rgb(26, 159, 199);
+    box-shadow: 0 0 20px rgb(19, 64, 148), 0 0 30px rgb(43, 142, 223);
+    border-radius: 50%;
+    width: 50%;
     opacity: 0;
     animation: slideBottom 1s ease forwards;
-}
-img {
-    position: relative;
-    margin: 0;
-    border-radius: 20%;
-    width: 100%;
-    height: 100%;
 }
 .logo {
     margin-top: -10%;
